--- a/docs/.github/workflows/build.yml
+++ b/docs/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: oven-sh/setup-bun@v2
       - run: bun i
-      - run: bun run build && echo "michioxd.ch" > ./dist/CNAME
+      - run: bun run build && echo "amayakuro.id.vn" > ./dist/CNAME
       - run: cp ./dist/index.html ./dist/404.html
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
